Build Post function
* Install rich-markdown-editor
* Create project.d.ts for common types/interfaces
* Create Post Component
* Add sample data json
* Tweak routes for post

--- a/src/assets/_board.scss
+++ b/src/assets/_board.scss
@@ -7,3 +7,15 @@
     }
   }
 }
+
+#boardPagination {
+  a.page {
+    border: 1px solid $color-light-gray;
+    text-decoration: none;
+
+    &.active {
+      background-color: $color-blue;
+      color: white;
+    }
+  }
+}
